k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: auth-service
        image: ghcr.io/junaidchm/auth-service:latest
        ports:
        - containerPort: 3001
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  - name: grpc
    port: 50051
    targetPort: 50051
