k8s/chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: chat-service
        image: ghcr.io/junaidchm/chat-service:latest
        ports:
        - containerPort: 4004
        - containerPort: 50054
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
  - name: http
    port: 4004
    targetPort: 4004
  - name: grpc
    port: 50054
    targetPort: 50054
