k8s/media-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: media-service
        image: ghcr.io/junaidchm/media-service:latest
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: media-service
  ports:
  - port: 5003
    targetPort: 5003
