k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: notification-service
        image: ghcr.io/junaidchm/notification-service:latest
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - port: 4001
    targetPort: 4001
