k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devhuddle-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 34.93.251.99.sslip.io
    secretName: devhuddle-tls
  rules:
  - host: 34.93.251.99.sslip.io
    http:
      paths:
      - path: /api(/api)?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
